--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>common-starter</module>
         <module>mapper-starter</module>
         <module>feign-starter</module>
+        <module>mongo-starter</module>
     </modules>
 
     <groupId>com.lx</groupId>
