--- a/feign-starter/pom.xml
+++ b/feign-starter/pom.xml
@@ -33,8 +33,8 @@
         </dependency>
         <dependency>
             <groupId>com.lx</groupId>
-            <artifactId>lx-common-starter</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <artifactId>common-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
