--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
         <pdfbox.version>2.0.24</pdfbox.version>
         <poi.version>5.0.0</poi.version>
         <druid.version>1.1.10</druid.version>
-        <log4j.version>1.3.8.RELEASE</log4j.version>
+        <log4j.version>2.15.0</log4j.version>
         <security.version>2.2.4.RELEASE</security.version>
         <mysql.version>8.0.16</mysql.version>
         <jdbctemplate.version>1.0.4-RELEASE</jdbctemplate.version>
