--- a/mapper-starter/pom.xml
+++ b/mapper-starter/pom.xml
@@ -16,8 +16,8 @@
     <dependencies>
         <dependency>
             <groupId>com.lx</groupId>
-            <artifactId>lx-common-starter</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <artifactId>common-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>tk.mybatis</groupId>
