--- a/pom.xml
+++ b/pom.xml
@@ -27,24 +27,20 @@
     <description>The project aim at easier to start a springboot project.</description>
 
     <properties>
-        <fastjson.version>1.2.31</fastjson.version>
-        <ribbon.version>2.1.3.RELEASE</ribbon.version>
-        <feign.version>2.1.3.RELEASE</feign.version>
         <spring.cloud-version>Hoxton.SR12</spring.cloud-version>
-        <boot.version>2.3.12.RELEASE</boot.version>
-        <nacos.version>2.2.7.RELEASE</nacos.version>
-        <zuul.version>2.1.2.RELEASE</zuul.version>
+        <spring.cloud.alibaba.version>2.2.7.RELEASE</spring.cloud.alibaba.version>
+        <spring.boot.version>2.3.12.RELEASE</spring.boot.version>
+        <log4j.version>2.15.0</log4j.version>
+        <mysql.version>8.0.16</mysql.version>
+        <druid.version>1.1.10</druid.version>
         <mybatis.starter.version>2.1.4</mybatis.starter.version>
         <tkmapper.starter.version>2.1.5</tkmapper.starter.version>
+        <jdbctemplate.version>1.0.4-RELEASE</jdbctemplate.version>
+        <fastjson.version>1.2.76</fastjson.version>
         <pagehelp.version>1.3.0</pagehelp.version>
         <swagger.version>3.0.0</swagger.version>
-        <pdfbox.version>2.0.24</pdfbox.version>
+        <pdfbox.version>2.0.23</pdfbox.version>
         <poi.version>5.0.0</poi.version>
-        <druid.version>1.1.10</druid.version>
-        <log4j.version>2.15.0</log4j.version>
-        <security.version>2.2.4.RELEASE</security.version>
-        <mysql.version>8.0.16</mysql.version>
-        <jdbctemplate.version>1.0.4-RELEASE</jdbctemplate.version>
     </properties>
 
     <dependencyManagement>
@@ -57,36 +53,23 @@
                 <scope>import</scope>
             </dependency>
             <dependency>
-                <groupId>mysql</groupId>
-                <artifactId>mysql-connector-java</artifactId>
-                <version>${mysql.version}</version>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>${spring.cloud.alibaba.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
             <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
-                <version>${zuul.version}</version>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring.boot.version}</version>
             </dependency>
 
+            <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-log4j -->
             <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
-                <version>${ribbon.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-openfeign</artifactId>
-                <version>${feign.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.alibaba.cloud</groupId>
-                <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-                <version>${nacos.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.alibaba.cloud</groupId>
-                <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
-                <version>${nacos.version}</version>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-log4j</artifactId>
+                <version>${log4j.version}</version>
             </dependency>
 
             <dependency>
@@ -94,21 +77,37 @@
                 <artifactId>fastjson</artifactId>
                 <version>${fastjson.version}</version>
             </dependency>
+
+            <!-- jdbc -->
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
                 <version>${mybatis.starter.version}</version>
             </dependency>
-
             <dependency>
                 <groupId>tk.mybatis</groupId>
                 <artifactId>mapper-spring-boot-starter</artifactId>
                 <version>${tkmapper.starter.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.crazycake</groupId>
+                <artifactId>jdbctemplatetool</artifactId>
+                <version>${jdbctemplate.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>com.github.pagehelper</groupId>
                 <artifactId>pagehelper-spring-boot-starter</artifactId>
                 <version>${pagehelp.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid</artifactId>
+                <version>${druid.version}</version>
             </dependency>
 
             <!-- http://localhost:8080/swagger-ui/index.html -->
@@ -129,37 +128,7 @@
                 <artifactId>poi-ooxml</artifactId>
                 <version>${poi.version}</version>
             </dependency>
-            <dependency>
-                <groupId>com.alibaba</groupId>
-                <artifactId>druid</artifactId>
-                <version>${druid.version}</version>
-            </dependency>
-            <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-log4j -->
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-log4j</artifactId>
-                <version>${log4j.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-security</artifactId>
-                <version>${security.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-oauth2</artifactId>
-                <version>${security.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-jdbc</artifactId>
-                <version>${boot.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.crazycake</groupId>
-                <artifactId>jdbctemplatetool</artifactId>
-                <version>${jdbctemplate.version}</version>
-            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
