--- a/mapper-starter/pom.xml
+++ b/mapper-starter/pom.xml
@@ -41,5 +41,10 @@
             <version>3.2.2</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 </project>
