--- a/mapper-starter/pom.xml
+++ b/mapper-starter/pom.xml
@@ -11,6 +11,7 @@
     </parent>
 
     <artifactId>mapper-starter</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <name>mapper-starter</name>
 
     <dependencies>
